fixed css bug: h2 anchor in wrong font

--- a/web/content/stylesheet.css
+++ b/web/content/stylesheet.css
@@ -10,7 +10,8 @@ body {
 }
 
 a {
-  text-decoration: none;
+  text-decoration: inherit;
+  font-family: inherit;
 }
 
 a:link,
